--- a/assets/scss/partials/_article.scss
+++ b/assets/scss/partials/_article.scss
@@ -29,8 +29,7 @@
     }
 }//.hero-article
 .bundles-article {
-    // padding-top: 118px;
-    // padding-bottom: 180px;
+    padding-bottom: 180px;
     &__title {
         margin-top: 118px;
         margin-bottom: 0;
