--- a/assets/scss/partials/_section.scss
+++ b/assets/scss/partials/_section.scss
@@ -59,9 +59,7 @@
     background-image: url(../img/bundle-bg.png);
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;   
-    padding-top: 118px;
-    padding-bottom: 180px;
+    background-repeat: no-repeat;  
 }
 
 .section--verizon-fios {
